buildpacks/nodejs-npm-engine/src/snapshots/errors___npm_engine_missing_npm_engine_requirement_error.snap
---
source: buildpacks/nodejs-npm-engine/src/errors.rs
---
! Missing `engines.npm` key in `package.json`
!
! This buildpack requires the `engines.npm` key to determine which engine versions to install.
