buildpacks/nodejs-npm-engine/src/snapshots/errors___npm_engine_npm_install_download_error.snap
---
source: buildpacks/nodejs-npm-engine/src/errors.rs
---
- Debug Info:
  - Request to https://test/error failed
    Error: error sending request for url (https://test/error)

! Failed to download `npm`
!
! An unexpected error occurred while downloading the `npm` package. This error can occur due to an unstable network connection or an issue with the npm repository.
!
! Suggestions:
! - Check the npm status page for any ongoing incidents (https://status.npmjs.org/)
!
! Use the debug information above to troubleshoot and retry your build.
