buildpacks/nodejs-npm-engine/src/snapshots/errors___npm_engine_npm_install_install_npm_error.snap
---
source: buildpacks/nodejs-npm-engine/src/errors.rs
---
- Debug Info:
  - Command failed `npm -g install /layers/npm/install/package`
    exit status: 1
    stdout: <empty>
    stderr: <empty>

! Failed to install the downloaded `npm` package
!
! An unexpected error occurred while installing the downloaded `npm` package.
!
! Use the debug information above to troubleshoot and retry your build.
!
! If the issue persists and you think you found a bug in the buildpack, reproduce the issue locally with a minimal example. Open an issue in the buildpack's GitHub repository and include the details here:
! https://github.com/heroku/buildpacks-nodejs/issues
